--- a/src/app/layout/header.component.html
+++ b/src/app/layout/header.component.html
@@ -2,16 +2,20 @@
   <mat-toolbar-row>
     <a href="https://www.ProAngular.com" target="_blank">
       <img
-        src="https://www.proangular.com/assets/images/pro-angular-logo-full.png"
+        src="https://www.proangular.com/images/pro-angular-logo-full.png"
+        alt="Pro Angular Logo"
       />
     </a>
     <div>
       <a
-        href="https://github.com/ProAngular/pro-form"
+        href="https://github.com/ProAngular/ngx-gist"
         aria-label="GitHub Repo"
         target="_blank"
       >
-        <img src="https://www.proangular.com/assets/images/git-hub.svg" />
+        <img
+          src="https://www.proangular.com/images/git-hub.svg"
+          alt="GitHub Logo"
+        />
       </a>
     </div>
   </mat-toolbar-row>
