--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,15 @@
   <h2 align="center">&#64;proangular/ngx-scroll-top</h2>
   <h3 align="center">Scroll down to demo</h3>
   <hr />
-  @for (number of Array(88); track number) {
+  @for (_ of Array(88); track $index) {
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minimssy
       veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip expir ea
       commodo consequat. Duis aute irure dolor in reprehenderit in esselpa
-      voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteury sint
-      occaecat cupidatat non proident, sunt in culpa qui officia luretzo deserunt
-      mollit anim id est laborum.
+      voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteury
+      sint occaecat cupidatat non proident, sunt in culpa qui officia luretzo
+      deserunt mollit anim id est laborum.
     </p>
   }
   <router-outlet />
@@ -31,4 +31,4 @@
   position="left"
   width="3rem"
   >&#8686;</ngx-scroll-top
-  >
+>
