--- a/src/app/layout/footer.component.html
+++ b/src/app/layout/footer.component.html
@@ -1,7 +1,8 @@
 <footer>
   <a href="https://www.ProAngular.com" target="_blank">
     <img
-      src="https://www.proangular.com/assets/images/pro-angular-logo-large.png"
+      src="https://www.proangular.com/images/pro-angular-logo-large.png"
+      alt="Pro Angular Logo"
     />
   </a>
   <p>
