--- a/src/app/public/ngx-scroll-top.component.html
+++ b/src/app/public/ngx-scroll-top.component.html
@@ -6,7 +6,7 @@
     [class.idle]="fadeState() === 'idle'"
     [style.background-color]="backgroundColor()"
     aria-label="Scroll to top"
-    style="overflow: visible;"
+    style="overflow: visible"
   >
     <div class="content" #content>
       <ng-content></ng-content>
