--- a/src/app/public/ngx-scroll-top.component.scss
+++ b/src/app/public/ngx-scroll-top.component.scss
@@ -62,28 +62,6 @@ svg.default-content {
   top: 0;
 }
 
-.fade-in {
-  animation: fadeIn 0.2s ease-in forwards;
-}
-
-.fade-out {
-  animation: fadeOut 0.2s ease-out forwards;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
+button.idle {
+  opacity: 0;
 }
