--- a/src/app/public/ngx-scroll-top.component.html
+++ b/src/app/public/ngx-scroll-top.component.html
@@ -3,7 +3,7 @@
     (click)="scrollTop()"
     [class.fade-in]="fadeState() === 'fading-in'"
     [class.fade-out]="fadeState() === 'fading-out'"
-    [class.idle]="fadeState() === 'idle'"
+    [class.not-rendered]="isButtonNotRendered()"
     [style.background-color]="backgroundColor()"
     aria-label="Scroll to top"
   >
