--- a/src/app/public/ngx-scroll-top.component.scss
+++ b/src/app/public/ngx-scroll-top.component.scss
@@ -4,59 +4,64 @@
 }
 
 div.content {
-  font-size: inherit;
+  align-content: center;
+  align-items: center;
+  border-radius: 50%;
   color: inherit;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  align-content: center;
+  font-size: inherit;
   justify-content: center;
-  align-items: center;
   overflow: hidden;
-  border-radius: 50%;
 }
 
 div.content,
 div.content > * {
-  width: 100%;
   height: 100%;
-  max-width: 100%;
   max-height: 100%;
+  max-width: 100%;
+  width: 100%;
 }
 
 button {
-  font-size: inherit;
-  overflow: hidden;
-  display: inline-block;
-  position: relative;
-  transition: all 0.1s ease-in-out;
-  color: inherit;
-  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
+  border-radius: 50%;
+  border: none;
+  box-shadow:
+    0px 3px 5px -1px rgba(0, 0, 0, 0.2),
     0px 6px 10px 0px rgba(0, 0, 0, 0.14),
     0px 1px 18px 0px rgba(0, 0, 0, 0.12);
-  user-select: none;
-  cursor: pointer;
-  outline: none;
-  border: none;
   box-sizing: border-box;
-  white-space: nowrap;
-  text-decoration: none;
-  vertical-align: baseline;
-  text-align: center;
-  margin: 0;
-  border-radius: 50%;
-  padding: 0;
+  color: inherit;
+  cursor: pointer;
+  display: inline-block;
   flex-shrink: 0;
+  font-size: inherit;
+  margin: 0;
+  outline: none;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: all 0.1s ease-in-out;
+  user-select: none;
+  vertical-align: baseline;
+  white-space: nowrap;
 }
 
 button,
 button > svg {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 svg.default-content {
+  left: 0;
   position: absolute;
   top: 0;
-  left: 0;
+}
+
+button.not-rendered {
+  opacity: 0;
 }
